# docs/swagger.yaml
@@ -1,4 +1,24 @@
 definitions:
+  request.UserLoginReq:
+    properties:
+      password:
+        example: required;min:6;max:20
+        type: string
+      username:
+        example: required;min:2;max:20
+        type: string
+    type: object
+  request.UserRegisterReq:
+    properties:
+      avatar_url:
+        type: string
+      password:
+        example: required;min:6;max:20
+        type: string
+      username:
+        example: required;min:2;max:20
+        type: string
+    type: object
   response.Status:
     properties:
       code:
@@ -40,18 +60,12 @@ paths:
       - application/json
       description: 用户登录
       parameters:
-      - description: 用户名
+      - description: 用户登录请求
         in: body
-        name: username
+        name: userLoginRequest
         required: true
         schema:
-          type: string
-      - description: 密码
-        in: body
-        name: password
-        required: true
-        schema:
-          type: string
+          $ref: '#/definitions/request.UserLoginReq'
       produces:
       - application/json
       responses:
@@ -73,6 +87,52 @@ paths:
           schema:
             $ref: '#/definitions/response.Status'
       summary: 用户登录
+      tags:
+      - 用户
+  /user/logout:
+    get:
+      description: 退出登录
+      responses:
+        "20000":
+          description: 退出成功
+          schema:
+            $ref: '#/definitions/response.Status'
+      summary: 退出登录
+      tags:
+      - 用户
+  /user/register:
+    post:
+      consumes:
+      - application/json
+      description: 用户注册
+      parameters:
+      - description: 用户注册请求
+        in: body
+        name: userRegisterRequest
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserRegisterReq'
+      produces:
+      - application/json
+      responses:
+        "20000":
+          description: 注册成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Status'
+            - properties:
+                data:
+                  $ref: '#/definitions/service.User'
+              type: object
+        "40001":
+          description: 请求参数格式错误
+          schema:
+            $ref: '#/definitions/response.Status'
+        "40002":
+          description: 请求参数不符合要求
+          schema:
+            $ref: '#/definitions/response.Status'
+      summary: 用户注册
       tags:
       - 用户
 swagger: "2.0"
