# internal/controller/user_controller.go
@@ -27,8 +27,7 @@ func NewUserController() *UserController {
 // @Tags 用户
 // @Accept  json
 // @Produce  json
-// @Param username body string true "用户名"
-// @Param password body string true "密码"
+// @Param userLoginRequest body request.UserLoginReq true "用户登录请求"
 // @Success 20000 {object} response.Status{data=service.User} "登录成功"
 // @Failure 40001 {object} response.Status "请求参数格式错误"
 // @Failure 40002 {object} response.Status "请求参数不符合要求"
@@ -46,12 +45,25 @@ func (u *UserController) Login(c *gin.Context) {
 		response.EndWithUnsatisfiedRequest(c, value)
 	}
 
-	s := sessions.Default(c)
-	session.SetUserId(value.(*service.User).Id, s, sessions.Options{})
+	user := value.(*service.User)
 
-	response.EndWithOK(c, value)
+	s := sessions.Default(c)
+	session.SetUserId(user.Id, s, sessions.Options{})
+
+	response.EndWithOK(c, user)
 }
 
+// Register godoc
+// @Summary 用户注册
+// @Description 用户注册
+// @Tags 用户
+// @Accept  json
+// @Produce  json
+// @Param userRegisterRequest body request.UserRegisterReq true "用户注册请求"
+// @Success 20000 {object} response.Status{data=service.User} "注册成功"
+// @Failure 40001 {object} response.Status "请求参数格式错误"
+// @Failure 40002 {object} response.Status "请求参数不符合要求"
+// @Router /user/register [post]
 func (u *UserController) Register(c *gin.Context) {
 	req := &request.UserRegisterReq{}
 	if err := c.ShouldBindJSON(req); err != nil {
@@ -73,9 +85,23 @@ func (u *UserController) Register(c *gin.Context) {
 	response.EndWithOK(c, user)
 }
 
+// Logout godoc
+// @Summary 退出登录
+// @Description 退出登录
+// @Tags 用户
+// @Success 20000 {object} response.Status "退出成功"
+// @Router /user/logout [get]
 func (u *UserController) Logout(c *gin.Context) {
 	session.ClearUserId(sessions.Default(c))
 	response.EndWithOK(c, nil)
+}
+
+func (u *UserController) UploadFile(c *gin.Context) {
+
+}
+
+func (u *UserController) DownloadFile(c *gin.Context) {
+
 }
 
 func (u *UserController) GithubLogin(c *gin.Context) {
